--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <audio controls autoplay="true" loop hidden>
+      <source src="CandyCrushSagaSong.mp3" type="audio/mp3" />
+    </audio>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
